--- a/ckanext/scheme_sddi/sddi_dataset.yaml
+++ b/ckanext/scheme_sddi/sddi_dataset.yaml
@@ -42,7 +42,6 @@ dataset_fields:
     label: Size
     validators: ignore_missing
     preset: select
-    form_placeholder: Represents the volume, complexity, and scale of datasets used for training the model.
     choices:
       - value: small
         label: Small (<10MB)
@@ -50,13 +49,12 @@ dataset_fields:
         label: Medium (10MB to 1GB)
       - value: large
         label: Large (>1GB)
-    help_text: Size of an AI model
+    help_text: Represents the volume, complexity, and scale of datasets used for training the model.
 
   - field_name: useCase
     label: Use Case
     validators: ignore_missing
     preset: select
-    form_placeholder:
     choices:
       - value: object detection
         label: AI-Powered Object Detection
@@ -66,13 +64,12 @@ dataset_fields:
         label: Infrastructure Optimization
       - value: simulation and scenario modeling
         label: Simulation and Scenario Modeling
-    help_text: Use Case of an AI model
+    help_text: Describes the real-world applications and scenarios where the AI model is utilized.
 
   - field_name: inputDataType
     label: Input Data Type
     validators: ignore_missing
     preset: select
-    form_placeholder: Represents the volume, complexity, and scale of datasets used for training the model.
     choices:
       - value: text
         label: Text
@@ -90,25 +87,23 @@ dataset_fields:
         label: Geospatial_Vector
       - value: raster
         label: Geospatial_Raster
-    help_text: Input data Type of an AI model
+    help_text: Represents the volume, complexity, and scale of datasets used for training the model.
 
   - field_name: finetunability
     label: Finetunability
     validators: ignore_missing
     preset: select
-    form_placeholder: Defines the models ability to adapt to new data without full retraining.
     choices:
       - value: yes
         label: Yes
       - value: no
         label: No
-    help_text: Weather an AI model can be finetunable or not
+    help_text: Defines the models ability to adapt to new data without full retraining.
 
   - field_name: framework
     label: Framework
     validators: ignore_missing
     preset: select
-    form_placeholder:
     choices:
       - value: framework
         label: PyTorch
@@ -134,7 +129,7 @@ dataset_fields:
         label: API-Based
       - value: framework
         label: Other
-    help_text: Framework of an AI model
+    help_text: Specifies the AI framework or development environment used, such as TensorFlow or PyTorch.
         
   - field_name: author
     label: Author
@@ -238,72 +233,72 @@ dataset_fields:
   - field_name: AIModel_softwareRequiements
     label: Software Requirements
     form_snippet: markdown.html
-    form_placeholder: Specifies the tools, libraries, and programming languages needed to implement and run the model.
+    help_text: Specifies the tools, libraries, and programming languages needed to implement and run the model.
 
   - field_name: AIModel_modelVersioning
     label: Model Versioning
     form_snippet: markdown.html
-    form_placeholder: Refers to the management of different model iterations to track changes and ensure reproducibility.
+    help_text: Refers to the management of different model iterations to track changes and ensure reproducibility.
 
   - field_name: AIModel_modelArchitecture
     label: Model Architecture
     form_snippet: markdown.html
-    form_placeholder: Describes the structural design, including algorithms, neural networks, and data processing flows.
+    help_text: Describes the structural design, including algorithms, neural networks, and data processing flows.
 
   - field_name: AIModel_ethicalConsiderations
     label: Ethical Considerations
     form_snippet: markdown.html
-    form_placeholder: Addresses privacy, bias, and compliance with ethical guidelines in AI deployment.
+    help_text: Addresses privacy, bias, and compliance with ethical guidelines in AI deployment.
 
   - field_name: AIModel_hardwareRequirements
     label: Hardware Requirements
     form_snippet: markdown.html
-    form_placeholder: Specifies the minimum computing resources needed, such as GPUs or processors.
+    help_text: Specifies the minimum computing resources needed, such as GPUs or processors.
 
   - field_name: AIModel_trainingParameters
     label: Training Parameters
     form_snippet: markdown.html
-    form_placeholder: Includes adjustable settings like learning rates, batch sizes, and hyperparameters.
+    help_text: Includes adjustable settings like learning rates, batch sizes, and hyperparameters.
  
   - field_name: AIModel_usageGuidelines
     label: Usage Guidelines
     form_snippet: markdown.html
-    form_placeholder: Outlines best practices, deployment conditions, and usage restrictions.
+    help_text: Outlines best practices, deployment conditions, and usage restrictions.
 
   - field_name: AIModel_limitations
     label: Limitations
     form_snippet: markdown.html
-    form_placeholder: Identifies constraints related to accuracy, scalability, or data compatibility.
-
+    help_text: Identifies constraints related to accuracy, scalability, or data compatibility.
+    
   - field_name: AIModel_modelOverview
     label: Model Overview
-    form_placeholder: Provides a summary of the models purpose, components, and key functionalities.
+    help_text: Provides a summary of the models purpose, components, and key functionalities.
 
   # Training Data
   - field_name: TrainingData_dataCollection
-    label: Data Collection
+    label: Training Data Collection
     form_snippet: markdown.html
-    form_placeholder:
+    help_text: Details how the training data was sourced, including methods and sources.
 
   - field_name: TrainingData_trainingDataProperties
     label: Training Data Properties
     form_snippet: markdown.html
-    form_placeholder:
+    help_text: Describes the characteristics of the training dataset, such as resolution, format, and structure.
     
   - field_name: TrainingData_labeling
-    label: Labeling
+    label: Training Data Labeling
     form_snippet: markdown.html
-    form_placeholder:
+    help_text: Indicates whether and how the training data has been labeled for supervised learning.
 
   - field_name: TrainingData_labelingGuidelines
-    label: Labeling Guidelines
+    label: Training Data Labeling Guidelines
     form_snippet: markdown.html
-    form_placeholder:
+    help_text: Specifies the rules and standards followed during data labeling.
 
   - field_name: TrainingData_description
     label: Training Data Description
     form_snippet: markdown.html
-    form_placeholder:
+    help_text: Provides an overview of the dataset used to train the AI model.
     
   - field_name: licence_agreement
     label: Datenschutzerklärung
